--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -14,7 +14,7 @@
 
 
 <body>
-	
+
 	<header>
 <!-- 		NAV
  -->	<nav id="navbar">
@@ -51,8 +51,10 @@
 
 				<div class="picContainer-fluid">
 					<div class="col-med-6">
+						<div style="max-height:450px; max-width:450px; overflow: hidden">
 						<img src="<%=users[i].avatar%>" id="userListPic" class="img-responsive" style="width:100%" alt="">
-						<div class="overlay">
+							</div>
+							<div class="overlay">
 							<div class="linkText"><p><a class="indexLink" href="/user/<%=users[i].id%>"><%=users[i].username%></a></p><br /></div>
 
 						</div>
