--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -42,7 +42,9 @@
 		    		<div class="card-hovercard">
 
 		        		<div class="card-background">
+									<div style="max-height:450px; max-width:450px; overflow: hidden">
 		            		<img id="userListPic" class="card-bkimg" alt="<%=user.username%>'s Avatar" src="<%=user.avatar%>">
+									</div>
 		        		</div>
 
 		        		<div class="card-info"> <span class="card-title"><h3> <%=user.username%></h3></span></div>
@@ -85,7 +87,7 @@
 								<li>Username: <%= user.username %></li>
 								<li>Email: <%=user.email %></li>
 							</ul>
-					
+
 			        </div>
 
 			        <div class="tab-pane fade in" id="tab2">
