--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -41,7 +41,7 @@
 			    	<div class="card-hovercard">
 
 			        <div class="card-background">
-								<div style="max-height:450px; max-width:450px; overflow: hidden">
+
 			            <img id="eventListPic" class="card-bkimg" alt="<%=event.name%> Image" src="<%=event.img%>">
 								</div>
 			            <!-- Img here-->
@@ -53,6 +53,7 @@
 			      	</div>
 			    	</div>
 					</div>
+				</div>
 
 
 			    <div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
