fixed event show card display

--- a/less/style.less
+++ b/less/style.less
@@ -95,13 +95,14 @@ ul {
 }
 
 
-/* Container holding the image and the text */
 #artistListPic, #eventListPic, #userListPic {
+	max-height: 200px;
+	max-width: 200px;
 	border-radius: 200px;
 }
 
 .picContainer-fluid {
-		flex-flow: wrap;
+	flex-flow: wrap;
     position: relative;
     text-align: center;
 		&:hover .overlay {
