--- a/less/style.less
+++ b/less/style.less
@@ -16,6 +16,7 @@
 	}
 }
 
+
 #home-message {
 	color: white;
 	text-align: center;
@@ -96,9 +97,11 @@ ul {
 
 
 #artistListPic, #eventListPic, #userListPic {
+	width: 100%;
+	height: 100%;
 	max-height: 200px;
 	max-width: 200px;
-	border-radius: 200px;
+	border-radius: 50%;
 }
 
 .picContainer-fluid {
@@ -114,7 +117,7 @@ ul {
 
 .overlay {
   position: absolute;
-	border-radius: 50px;
+  border-radius: 50px;
   top: 0;
   bottom: 0;
   left: 0;
@@ -217,6 +220,7 @@ ul {
 
 //homepage
 .jumbotron {
+	width: 100%;
     background-color:transparent !important;
     margin: 0 !important;
 }
@@ -226,14 +230,14 @@ ul {
 		h1 {
 			font-family: @titleFont;
 			color: rgba(230, 96, 67, 0.75);
-			text-shadow: 3px 3px 0px #62717b, 5px 5px 0px #889DAB;
-			letter-spacing: 5px;
-			font-size: 9em;
+			text-shadow: 0.5vw 0.5vw 0vw #62717b, 0.7vw 0.7vw #889DAB;
+			letter-spacing: 0.7vw;
+			font-size: 15vw;
 		}
 
 		h3 {
 			font-family: @headerFont;
-			font-size: 3em;
+			font-size: 4.5vw;
 			color: #e2f1f8;
 		}
 
@@ -243,6 +247,9 @@ ul {
 		}
 	}
 
+div.container.text-center {
+	padding: 0;
+}
 
 //carousel
 #carousel {
