--- a/public/css/style.css
+++ b/public/css/style.css
@@ -86,9 +86,11 @@ ul {
 #artistListPic,
 #eventListPic,
 #userListPic {
+  width: 100%;
+  height: 100%;
   max-height: 200px;
   max-width: 200px;
-  border-radius: 200px;
+  border-radius: 50%;
 }
 .picContainer-fluid {
   flex-flow: wrap;
@@ -190,6 +192,7 @@ ul {
   color: #1c313a;
 }
 .jumbotron {
+  width: 100%;
   background-color: transparent !important;
   margin: 0 !important;
 }
@@ -201,20 +204,23 @@ ul {
 #index-jumbo h1 {
   font-family: 'Shrikhand', cursive;
   color: rgba(230, 96, 67, 0.75);
-  text-shadow: 3px 3px 0px #62717b, 5px 5px 0px #889DAB;
-  letter-spacing: 5px;
-  font-size: 9em;
+  text-shadow: 0.5vw 0.5vw 0vw #62717b, 0.7vw 0.7vw #889DAB;
+  letter-spacing: 0.7vw;
+  font-size: 15vw;
 }
 #homepage-jumbo h3,
 #index-jumbo h3 {
   font-family: 'Permanent Marker', cursive;
-  font-size: 3em;
+  font-size: 4.5vw;
   color: #e2f1f8;
 }
 #homepage-jumbo p,
 #index-jumbo p {
   font-family: 'Maven Pro', sans-serif;
   color: #e2f1f8;
+}
+div.container.text-center {
+  padding: 0;
 }
 #carousel {
   background-color: #000000;
