--- a/less/style.less
+++ b/less/style.less
@@ -4,6 +4,10 @@
 @linkFont: 'Maven Pro', sans-serif;
 @textFont: 'Maven Pro', sans-serif;
 
+body {
+	background-color: #62717b !important;
+}
+
 #navbar {
 	background-color: #102027;
 	font-family: @navFont;
@@ -99,9 +103,9 @@ ul {
 #artistListPic, #eventListPic, #userListPic {
 	width: 100%;
 	height: 100%;
-	max-height: 200px;
-	max-width: 200px;
-	border-radius: 50%;
+	max-height: 30vw;
+	max-width: 30vw;
+	border-radius: 100%;
 }
 
 .picContainer-fluid {
@@ -224,12 +228,19 @@ ul {
     background-color:transparent !important;
     margin: 0 !important;
 }
-
+.jumbotron {
+	// padding: 0 !important;
+	// margin: 0 !important;
+	// -top: 2vh;
+	// margin-bottom: 4vh;
+}
 #homepage-jumbo, #index-jumbo {
+	margin: 0;
+	max-height: 50vh;
 	background-color: #62717b;
 		h1 {
 			font-family: @titleFont;
-			color: rgba(230, 96, 67, 0.75);
+			color: rgba(230, 96, 67, 1);
 			text-shadow: 0.5vw 0.5vw 0vw #62717b, 0.7vw 0.7vw #889DAB;
 			letter-spacing: 0.7vw;
 			font-size: 15vw;
@@ -252,8 +263,24 @@ div.container.text-center {
 }
 
 //carousel
+div.col-md-12 {
+	padding-right: 2vw;
+	padding-left: 2vw;
+}
 #carousel {
-	background-color: rgb(0, 0, 0);
+	max-height: 50vh;
+	.col-md-12 {
+		max-height: 100%;
+		background-color: rgb(0, 0, 0);
+	}
+	h3 {
+		font-size: 6vw;
+	}
+}
+.carousel-indicators * {
+
+	max-width: 3vw ;
+	max-height: 3vw ;
 }
 
 
