--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,6 @@
+body {
+  background-color: #62717b !important;
+}
 #navbar {
   background-color: #102027;
   font-family: 'Maven Pro', sans-serif;
@@ -88,9 +91,9 @@ ul {
 #userListPic {
   width: 100%;
   height: 100%;
-  max-height: 200px;
-  max-width: 200px;
-  border-radius: 50%;
+  max-height: 30vw;
+  max-width: 30vw;
+  border-radius: 100%;
 }
 .picContainer-fluid {
   flex-flow: wrap;
@@ -198,12 +201,14 @@ ul {
 }
 #homepage-jumbo,
 #index-jumbo {
+  margin: 0;
+  max-height: 50vh;
   background-color: #62717b;
 }
 #homepage-jumbo h1,
 #index-jumbo h1 {
   font-family: 'Shrikhand', cursive;
-  color: rgba(230, 96, 67, 0.75);
+  color: #e66043;
   text-shadow: 0.5vw 0.5vw 0vw #62717b, 0.7vw 0.7vw #889DAB;
   letter-spacing: 0.7vw;
   font-size: 15vw;
@@ -222,8 +227,23 @@ ul {
 div.container.text-center {
   padding: 0;
 }
+div.col-md-12 {
+  padding-right: 2vw;
+  padding-left: 2vw;
+}
 #carousel {
+  max-height: 50vh;
+}
+#carousel .col-md-12 {
+  max-height: 100%;
   background-color: #000000;
+}
+#carousel h3 {
+  font-size: 6vw;
+}
+.carousel-indicators * {
+  max-width: 3vw ;
+  max-height: 3vw ;
 }
 #loginModal,
 #registerModal {
