--- a/less/style.less
+++ b/less/style.less
@@ -42,7 +42,11 @@ body {
 #logout {
 	background-color: #ff7043;
 	color: white;
-
+	padding: 0 !important;
+	max-width: 93.55vw !important;
+	margin-left: 1.58vw !important;
+	// margin-left: 2.5vw;
+	// margin-right: -3vw;
 	&:hover {
 		background-color: #ffa270;
 		transition: .5s ease;
@@ -228,12 +232,6 @@ ul {
     background-color:transparent !important;
     margin: 0 !important;
 }
-.jumbotron {
-	// padding: 0 !important;
-	// margin: 0 !important;
-	// -top: 2vh;
-	// margin-bottom: 4vh;
-}
 #homepage-jumbo, #index-jumbo {
 	margin: 0;
 	max-height: 50vh;
@@ -281,6 +279,15 @@ div.col-md-12 {
 
 	max-width: 3vw ;
 	max-height: 3vw ;
+}
+
+// NEW VIEW
+.create-new {
+	color: #f4511e;
+}
+.control-label {
+	font-size: 20px;
+	color: white;
 }
 
 
