--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,9 @@ body {
 #logout {
   background-color: #ff7043;
   color: white;
+  padding: 0 !important;
+  max-width: 93.55vw !important;
+  margin-left: 1.58vw !important;
 }
 #logout:hover {
   background-color: #ffa270;
@@ -244,6 +247,13 @@ div.col-md-12 {
 .carousel-indicators * {
   max-width: 3vw ;
   max-height: 3vw ;
+}
+.create-new {
+  color: #f4511e;
+}
+.control-label {
+  font-size: 20px;
+  color: white;
 }
 #loginModal,
 #registerModal {
