--- a/views/artist/new.ejs
+++ b/views/artist/new.ejs
@@ -40,7 +40,7 @@
           <div class="container-fluid text-center">
     				<div class="col-lg-12 col-sm-12">
 
-              <h4>Create New Artist for <%=user.username%></h4>
+              <h1 class="create-new">Create New Artist for <%=user.username%></h1>
 
                 <form action="/artist" method="POST"><br />
 
@@ -64,7 +64,7 @@
     						<input type="text" class= "form-control" name="img" placeholder="Image Link"><br />
 
     						<label class= "control-label" for="artistDescription">Artist Description:</label><br />
-    						<textarea name="description" rows="12" cols="80" placeholder="Description"></textarea><br /><br />
+    						<textarea name="description" rows="8" class="form-control" placeholder="Description"></textarea><br /><br />
 
     						<button id="new-submit" class="btn btn-dark mb-2 btn-block" type="submit">Create Artist</button>
     					</form>
@@ -74,9 +74,9 @@
         </div>
       </main>
 
-  <footer class="container-fluid text-center">
+  <footer class="container-fluid">
     <form action="/logout" method="GET">
-        <input type="submit" class="btn-block" id="logout" value="Logout <%=user.username%>" />
+        <input type="submit" class="btn btn-block form-control" id="logout" value="Logout <%=user.username%>" />
     </form>
   </footer>
 
