adjusted logout button display

--- a/less/style.less
+++ b/less/style.less
@@ -43,8 +43,8 @@ body {
 	background-color: #ff7043;
 	color: white;
 	padding: 0 !important;
-	max-width: 93.55vw !important;
-	margin-left: 1.58vw !important;
+	// max-width: 86.5vw !important;
+	// margin-left: 3.4vw !important;
 	// margin-left: 2.5vw;
 	// margin-right: -3vw;
 	&:hover {
