--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,6 @@
 body {
   background-color: #62717b !important;
 }
-#navbar {
-  background-color: #102027;
-  font-family: 'Maven Pro', sans-serif;
-  font-size: 1.5em;
-}
-#navbar a {
-  color: #e2f1f8;
-}
-#navbar a:hover {
-  background-color: rgba(46, 57, 62, 0.83);
-}
 #home-message {
   color: white;
   text-align: center;
@@ -228,6 +217,60 @@ ul {
 }
 div.container.text-center {
   padding: 0;
+}
+nav {
+  height: 50px !important;
+}
+span.navbar-toggler-icon {
+  color: #e2f1f8 !important;
+}
+a.nav-item.nav-link,
+div.dropdown-menu.show,
+div.dropdown-menu {
+  background-color: #102027 !important;
+  font-size: 20px;
+}
+#sign-up {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-right: 12px;
+}
+.navbar-brand {
+  font-size: 21.5px !important;
+}
+@media (max-width: 767px) {
+  nav {
+    margin-top: -8px;
+  }
+  #browse {
+    position: absolute;
+    top: 1;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  .navbar-right {
+    position: absolute;
+    top: 0;
+    right: -1.7vw;
+  }
+}
+#browse {
+  width: 120px;
+  margin: 0;
+}
+#browse:focus {
+  background-color: rgba(46, 57, 62, 0.83);
+}
+#navbar {
+  background-color: #102027;
+  font-family: 'Maven Pro', sans-serif;
+  font-size: 1.5em;
+}
+#navbar a {
+  color: #e2f1f8;
+}
+#navbar a:hover {
+  background-color: rgba(46, 57, 62, 0.83);
 }
 div.col-md-12 {
   padding-right: 2vw;
