--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -15,22 +15,33 @@
     <header>
 
       <nav id="navbar">
-          <div class="container-fluid">
+          <a class="navbar-brand" href="/">Home</a>
+         <!--  <button id="toggler" class="custom-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button> -->
 
-              <ul class="nav navbar-left">
-                <li class="active"><a href="/">Home</a></li>
-                <li><a href="/user">Users</a></li>
-                <li><a href="/artist">Artists</a></li>
-                <li><a href="/event">Events</a></li>
-              </ul>
+<!--           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+ -->        <ul class="nav navbar-nav">
 
-              <ul class= "nav navbar-right">
-                <li><a data-toggle="modal" data-target="#loginModal">Log In</a></li>
-                 <li><a data-toggle="modal" data-target="#registerModal">Sign Up</a></li>
-              </ul>
-
-          </div>
-        </nav>
+              <li class="nav-item dropdown">
+                <a class="dropdown-toggle" id="browse" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Browse</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="nav-item nav-link" href="/user">Users</a>
+                  <a class="nav-item nav-link" href="/artist">Artists</a>
+                  <a class="nav-item nav-link" href="/event">Events</a>
+                </div>
+              </li>
+            </ul>
+            <ul class="nav navbar-right">
+              <li>
+                <a class="nav-link" data-toggle="modal" data-target="#loginModal">Log In</a>
+              </li>
+              <li>
+                <a id="sign-up" class="nav-link" data-toggle="modal" data-target="#registerModal">Sign Up</a>
+              </li>
+            </ul>
+<!--           </div>
+ -->        </nav>
       </header>
 
       <main>
