--- a/less/style.less
+++ b/less/style.less
@@ -97,8 +97,8 @@ ul {
 #artistListPic, #eventListPic, #userListPic {
 	width: 100%;
 	height: 100%;
-	max-height: 30vw;
-	max-width: 30vw;
+	max-height: 280px;
+	max-width: 280px;
 	border-radius: 100%;
 }
 
@@ -286,6 +286,7 @@ a.nav-item.nav-link, div.dropdown-menu.show, div.dropdown-menu{
 	    right: -1.7vw;
 	}
 }
+
 #browse {
 	width: 120px;
 	margin: 0;
