--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,8 +81,8 @@ ul {
 #userListPic {
   width: 100%;
   height: 100%;
-  max-height: 30vw;
-  max-width: 30vw;
+  max-height: 280px;
+  max-width: 280px;
   border-radius: 100%;
 }
 .picContainer-fluid {
