added padding to dropdown in landing page

--- a/less/style.less
+++ b/less/style.less
@@ -259,6 +259,7 @@ span.navbar-toggler-icon{
 a.nav-item.nav-link, div.dropdown-menu.show, div.dropdown-menu{
 	background-color: #102027 !important;
 	font-size: 20px;
+	padding-left: 7px;
 }
 
 #sign-up {
