--- a/less/style.less
+++ b/less/style.less
@@ -93,6 +93,13 @@ ul {
 	}
 }
 
+#artistCarouselPic, #eventCarouselPic, #userCarouselPic {
+	width: 100%;
+	height: 100%;
+	max-width: 30vw;
+	max-height: 30vw;
+	border-radius: 100%;
+}
 
 #artistListPic, #eventListPic, #userListPic {
 	width: 100%;
