--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,6 +76,15 @@ ul {
   text-decoration: none;
   text-transform: uppercase;
 }
+#artistCarouselPic,
+#eventCarouselPic,
+#userCarouselPic {
+  width: 100%;
+  height: 100%;
+  max-width: 30vw;
+  max-height: 30vw;
+  border-radius: 100%;
+}
 #artistListPic,
 #eventListPic,
 #userListPic {
