--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -79,7 +79,7 @@
                                   <h3> User</h3>
                                   <p> User Description</p>
                                   <%} else {%>
-                                    <img id= "userListPic" alt="<%=users[userNum].username%> Image" src="<%=users[userNum].img%>">
+                                    <img id= "userCarouselPic" alt="<%=users[userNum].username%> Image" src="<%=users[userNum].img%>">
                                      <h3>
                                      <a id="user-carousel" href="/user"><%=users[userNum].username%></a></h3>
                                      <p><%=users[userNum].description%></p>
@@ -95,7 +95,7 @@
                                     <h3> Artist</h3>
                                     <p> Artist Description</p>
                                   <%} else {%>
-                                    <img id="artistListPic" alt="<%=artists[artistNum].name%> Image" src="<%=artists[artistNum].img%>">
+                                    <img id="artistCarouselPic" alt="<%=artists[artistNum].name%> Image" src="<%=artists[artistNum].img%>">
                                     <h3>
                                      <a id="artist-carousel" href="/artist"><%=artists[artistNum].name%></a></h3>
                                      <p><%=artists[artistNum].description%></p>
@@ -112,7 +112,7 @@
                                   <h3> Event</h3>
                                   <p> Event Description</p>
                                 <%} else {%>
-                                  <img id="eventListPic" alt="<%=events[eventNum].name%> Image" src="<%=events[eventNum].img%>">
+                                  <img id="eventCarouselPic" alt="<%=events[eventNum].name%> Image" src="<%=events[eventNum].img%>">
                                   <h3>
                                    <a id="event-carousel" href="/event"><%=events[eventNum].name%></a></h3>
                                    <p><%=events[eventNum].description%></p>
