removed descriptions from carousel; added media query for mobile phones; removed console.logs from code

--- a/less/style.less
+++ b/less/style.less
@@ -275,7 +275,7 @@ a.nav-item.nav-link, div.dropdown-menu.show, div.dropdown-menu{
 	margin-right: 12px;
 }
 .navbar-brand {
-	font-size: 21.5px !important;
+	font-size: 21.5px;
 }
 // correction for .navbar-right
 @media (max-width: 767px) {
@@ -291,6 +291,30 @@ a.nav-item.nav-link, div.dropdown-menu.show, div.dropdown-menu{
 	.navbar-right {
 		position: absolute;
 		top: 0;
+	    right: -1.7vw;
+	}
+}
+
+@media (max-width: 450px) {
+	nav {
+		margin-top: -8px;
+		* {
+			font-size: 12px;
+		}
+	}
+	.navbar-brand {
+		font-size: 14px;
+	}
+	#browse {
+		position: absolute;
+		left: -5vw;
+		top: 0.5vw;
+		padding-top: 15px;
+		padding-bottom: 15px;
+	}
+	.navbar-right {
+		position: absolute;
+		top: 2.4vw;
 	    right: -1.7vw;
 	}
 }
