now user images show up on landing page carousel

--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -78,7 +78,7 @@
                                   <img alt="Static User Image" src="../images/missing-image.png">
                                   <h3>User</h3>
                                   <%} else {%>
-                                    <img id= "userCarouselPic" alt="<%=users[userNum].username%> Image" src="<%=users[userNum].img%>">
+                                    <img id= "userCarouselPic" alt="<%=users[userNum].username%> Image" src="<%=users[userNum].avatar%>">
                                      <h3>
                                      <a id="user-carousel" href="/user"><%=users[userNum].username%></a></h3>
                                   <%}%>
