added icon to browser tab

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Maven+Pro:500,700|Permanent+Marker|Shrikhand" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="icon" type="image/png" href="../images/cursor.png">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+
     <title></title>
   </head>
   <body>
