--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -9,15 +9,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body>
+<body>
 
-
-    <header>
-
-      <nav id="navbar">
-          <a class="navbar-brand" href="/">Home</a>
-         <!--  <button id="toggler" class="custom-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+  <header>
+    <nav id="navbar">
+      <a class="navbar-brand" href="/">Home</a>
+      <!--  <button id="toggler" class="custom-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
           </button> -->
 
 <!--           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -75,7 +73,7 @@
                                <img src="../images/Webp.net-resizeimage.jpg" alt="First slide">
                                 <div class="carousel-caption">
                                   <%if (users[0] === undefined) {%>
-                                  <img alt="Static User Image" src="../images/missing-image.png">
+                                  <img alt="Static User Image" src="">
                                   <h3>User</h3>
                                   <%} else {%>
                                     <img id= "userCarouselPic" alt="<%=users[userNum].username%> Image" src="<%=users[userNum].avatar%>">
@@ -89,22 +87,25 @@
                               <img src="../images/Webp.net-resizeimage.jpg" alt="Second slide">
                                  <div class="carousel-caption">
                                    <%if (artists[0] === undefined) {%>
-                                    <img alt="Static Artist Image" src="../images/missing-image.png">
+                                    <img alt="Static Artist Image" src="">
                                     <h3>Artist</h3>
-                                  <%} else {%>
-                                    <img id="artistCarouselPic" alt="<%=artists[artistNum].name%> Image" src="<%=artists[artistNum].img%>">
-                                    <h3>
-                                     <a id="artist-carousel" href="/artist"><%=artists[artistNum].name%></a></h3>
+                                    <%} else {%>
+                                      <img id="artistCarouselPic" alt="<%=artists[artistNum].name%> Image" src="<%=artists[artistNum].img%>">
+                                      <h3>
+                                        <a id="artist-carousel" href="/artist">
+                                          <%=artists[artistNum].name%>
+                                        </a>
+                                      </h3>
                                   <%}%>
                                </div>
                              </div>
 
 
                             <div class="item">
-                              <img src="../images/Webp.net-resizeimage.jpg" alt="Third slide">
+                              <img src="/images/Webp.net-resizeimage.jpg" alt="Third slide">
                                 <div class="carousel-caption">
                                 <%if (events[0] === undefined) {%>
-                                  <img alt="Static Event Image" src="../images/missing-image.png">
+                                  <img alt="Static Event Image" src="">
                                   <h3>Event</h3>
                                 <%} else {%>
                                   <img id="eventCarouselPic" alt="<%=events[eventNum].name%> Image" src="<%=events[eventNum].img%>">
