--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Edit User</title>
-	<link rel="stylesheet" href="../css/style.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<style>
-	body { padding-top: 10px; };
-	</style>
-</head>
+	<head>
+		<title>Edit User</title>
+		<link rel="stylesheet" href="../css/style.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<style>
+			body { padding-top: 10px; };
+		</style>
+	</head>
 <body>
 
-<!-- 	NAV
- -->	<header>
+	<header>
 
+		<!-- 	NAV -->	
 		<nav id= "navbar" class="navbar navbar-inverse">
-
 			<div class="container-fluid">
 
 				<ul class="nav navbar-left">
@@ -26,49 +25,53 @@
 				</ul>
 
 				<ul class="nav navbar-right">
-					<li><a href="/user/<%= user.id %>"><span class="glyphicon glyphicon-plus"></span>Back to Profile</a></li>
+					<li>
+						<a href="/user/<%= user.id %>">
+							<span class="glyphicon glyphicon-plus"></span>
+						Back to Profile</a>
+					</li>
 				</ul>
+
 			</div>
 		</nav>
 
 	</header>
 
 
-<!-- 	EDIT CONTENTS
- -->	<main>
+	<!-- 	EDIT CONTENTS  -->	
+	<main>
 		<div class="container-fluid text-center">
 			<div class="col-lg-12 col-sm-12">
 				<h1>Edit <%=user.username%>'s Information</h1>
 
-				<form class= "form-inline-block" action="/user/<%=index%>?_method=PUT" method="POST">
+				<form class="form-inline-block" action="/user/<%=index%>?_method=PUT" method="POST">
 
-					<label class= "control-label" for="updateUsername">Update Username:</label>
-					<input type="text" class= "form-control" name="username" id= "updateUsername" placeholder="Username" value="<%=user.username%>"><br />
+					<label class="control-label" for="updateUsername">Update Username:</label>
+					<input type="text" class="form-control" name="username" id= "updateUsername" placeholder="Username" value="<%=user.username%>"><br />
 
-					<label class= "control-label" for="updateUserEmail">Update Email:</label>
-					<input type="text" class= "form-control" name="email" placeholder="Email Address" value="<%=user.email%>"><br />
+					<label class="control-label" for="updateUserEmail">Update Email:</label>
+					<input type="text" class="form-control" name="email" placeholder="Email Address" value="<%=user.email%>"><br />
 
 					<label class= "control-label" for="updateUserAvatar">Update Avatar:</label>
-					<input type="text" class= "form-control" name="avatar" placeholder="Image Link"><br />
+					<input type="text" class="form-control" name="avatar" placeholder="Image Link"><br />
 
 		<!-- 		unable to edit password. if we set the value as the user password, the form will generate the password hash.
 					for this to work, I think we'd need to bcrypt the password that's submitted in this form.
-					Password: <input type="password" name="password" placeholder="password" value="user.password%>"> <br>
+					Password: <input type="password" name="password" placeholder="Password" value="user.password%>"> <br>
 		 -->
 
-					<button id= "edit-submit" class="btn btn-dark mb-2 btn-block" type="submit">Submit Changes</button>
+					<button id="edit-submit" class="btn btn-dark mb-2 btn-block" type="submit">Submit Changes</button>
 				</form>
 			</div>
 		</div>
 	</main>
 
-<!-- 	LOGOUT
- -->	<footer class="container-fluid text-center">
+	<!-- 	LOGOUT -->	
+	<footer class="container-fluid text-center">
 		<form action="/logout" method="GET">
    			<input type="submit" class="btn-block" id="logout" value="Logout <%=user.username%>" />
 		</form>
 	</footer>
-
 
 </body>
 </html>
