--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -12,133 +12,165 @@
 </head>
 <body>
 
-<!-- 	NAV
- --><header>
+	<!-- NAV -->
+	<header>
 		<nav id="navbar">
-				<div class="container-fluid">
+			<div class="container-fluid">
 
-						<ul class="nav navbar-left">
-							<li class="active"><a href="/">Home</a></li>
-							<li><a href="/artist">Artists</a></li>
-							<li><a href="/event">Events</a></li>
-						</ul>
+				<ul class="nav navbar-left">
+					<li class="active"><a href="/">Home</a></li>
+					<li><a href="/artist">Artists</a></li>
+					<li><a href="/event">Events</a></li>
+				</ul>
 
-						<ul class="nav navbar-right">
-							<li><a href="/user"><span class="glyphicon glyphicon-plus"></span> Back to Users</a></li>
-						</ul>
-					</div>
-				</div>
-			</nav>
+				<ul class="nav navbar-right">
+					<li><a href="/user"><span class="glyphicon glyphicon-plus"></span> Back to Users</a></li>
+				</ul>
 
-		</div>
+			</div>
+		</nav>
 	</header>
 
 	<main>
-<!-- 	USER DISPLAY
-	 --><div class="container-fluid">
+
+		<!-- 	USER DISPLAY -->
+		<div class="container-fluid">
 			<div class="col-lg-12 col-sm-12">
 				<div class="row justify-content-around">
+					<div class="card-hovercard">
+						<div class="card-background">
+		           <img id="userListPic" class="card-bkimg" alt="<%=user.username%>'s Avatar" src="<%=user.avatar%>">
+		        </div>
 
-		    		<div class="card-hovercard">
-
-		        		<div class="card-background">
-		            		<img id="userListPic" class="card-bkimg" alt="<%=user.username%>'s Avatar" src="<%=user.avatar%>">
-
-		        		</div>
-
-		        		<div class="card-info"> <span class="card-title"><h3> <%=user.username%></h3></span></div>
-		    		</div>
+		        <div class="card-info"> 
+		        	<span class="card-title">
+		        		<h3><%=user.username%></h3>
+		        	</span>
+		        </div>
+		    		
+		    	</div>
 				</div>
 			</div>
 		</div>
 
-<!-- 		TAB NAMES
- -->	<div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
-	        <div class="btn-group" role="group">
-	            <button type="button" id="stars" class="btn btn-dark" href="#tab1" data-toggle="tab"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-	                <div class="hidden-xs">About</div>
-	            </button>
-	        </div>
-	        <div class="btn-group" role="group">
-	            <button type="button" id="favorites" class="btn btn-default" href="#tab2" data-toggle="tab"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
-	                <div class="hidden-xs">Likes</div>
-	            </button>
-	        </div>
-	        <div class="btn-group" role="group">
-	            <button type="button" id="following" class="btn btn-default" href="#tab3" data-toggle="tab"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
-	                <div class="hidden-xs">Attending</div>
-	            </button>
-	        </div>
-					<div class="btn-group" role="group">
-	            <button type="button" id="affiliatedArtists" class="btn btn-default" href="#tab4" data-toggle="tab"><span class="glyphicon glyphicon-headphones" aria-hidden="true"></span>
-	                <div class="hidden-xs">Artists</div>
-	            </button>
-	        </div>
+		<!-- TAB NAMES -->	
+		<div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
+
+			<!-- ABOUT -->
+	    <div class="btn-group" role="group">
+	      <button type="button" id="stars" class="btn btn-dark" href="#tab1" data-toggle="tab">
+	      	<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+	        <div class="hidden-xs">About</div>
+	      </button>
 	    </div>
 
-<!-- 	    TAB CONTENTS
- -->	    <div class="well">
-			      <div class="tab-content">
+	    <!-- LIKES -->
+	    <div class="btn-group" role="group">
+	      <button type="button" id="favorites" class="btn btn-default" href="#tab2" data-toggle="tab">
+	      	<span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+	        <div class="hidden-xs">Likes</div>
+	      </button>
+	    </div>
 
-			        <div class="tab-pane fade in active" id="tab1">
+	    <!-- ATTENDING -->
+	    <div class="btn-group" role="group">
+	      <button type="button" id="following" class="btn btn-default" href="#tab3" data-toggle="tab">
+	      	<span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
+	      	<div class="hidden-xs">Attending</div>
+	      </button>
+	    </div>
+			
+			<!-- ARTISTS -->
+			<div class="btn-group" role="group">
+	      <button type="button" id="affiliatedArtists" class="btn btn-default" href="#tab4" data-toggle="tab">
+	      	<span class="glyphicon glyphicon-headphones" aria-hidden="true"></span>
+	        <div class="hidden-xs">Artists</div>
+	      </button>
+	    </div>
 
-							<ul>
-								<li>Username: <%= user.username %></li>
-								<li>Email: <%=user.email %></li>
-							</ul>
+	  </div>
 
-			        </div>
+		<!-- TAB CONTENTS -->	    
+		<div class="well">
+			<div class="tab-content">
+				<div class="tab-pane fade in active" id="tab1">
 
-			        <div class="tab-pane fade in" id="tab2">
-			          <h3>Artists Liked</h3>
-			          	<ul>
-			          		<% for (let i = 0; i < user.artistsLiked.length; i++) { -%>
-			          			<li><a href="/artist/<%=user.artistsLiked[i].id%>"><%=user.artistsLiked[i].name%></a></li>
-			          		<% } -%>
-			      		</ul>
-			        </div>
+					<ul>
+						<li>Username: <%= user.username %></li>
+						<li>Email: <%=user.email %></li>
+					</ul>
 
-			        <div class="tab-pane fade in" id="tab3">
-			          <h3>Events Attending</h3>
-			          		<ul>
-      							<% for (let i = 0; i < user.eventsAttending.length; i++) { -%>
-        							<li><a href="/event/<%=user.eventsAttending[i].id%>"><%= user.eventsAttending[i].name%></a></li>
-      							<% } -%>
-      						</ul>
-			        </div>
-					<div class="tab-pane fade in" id="tab4">
-			          <h3>Affiliated Artists</h3>
-			          		<ul>
-      							<% for (let i = 0; i < user.artists.length; i++) { -%>
-        							<li><a href="/artist/<%=user.artists[i].artist_id%>"><%= user.artists[i].name%></a></li>
-      							<% } -%>
-      						</ul>
-			        </div>
-			      </div>
-	    	</div>
+	      </div>
+
+	      <div class="tab-pane fade in" id="tab2">
+	        <h3>Artists Liked</h3>
+	      	<ul>
+	      		<% for (let i = 0; i < user.artistsLiked.length; i++) { -%>
+	      			<li>
+	      				<a href="/artist/<%=user.artistsLiked[i].id%>">
+	      					<%=user.artistsLiked[i].name%>
+	      				</a>
+	      			</li>
+	      		<% } -%>
+	  			</ul>
+	      </div>
+
+	      <div class="tab-pane fade in" id="tab3">
+	        <h3>Events Attending</h3>
+	      	<ul>
+						<% for (let i = 0; i < user.eventsAttending.length; i++) { -%>
+							<li>
+								<a href="/event/<%=user.eventsAttending[i].id%>">
+									<%= user.eventsAttending[i].name%>
+								</a>
+							</li>
+						<% } -%>
+					</ul>
+	      </div>
+
+				<div class="tab-pane fade in" id="tab4">
+		      <h3>Affiliated Artists</h3>
+		      <ul>
+						<% for (let i = 0; i < user.artists.length; i++) { -%>
+							<li>
+								<a href="/artist/<%=user.artists[i].artist_id%>">
+									<%= user.artists[i].name%>
+									</a>
+							</li>
+						<% } -%>
+					</ul>
+		    </div>
+		  </div>
+	  </div>
 
 
-<!-- 	    EDIT/DELETE USER
- -->	<div class="col-lg-12 col-sm-12">
+		<!-- EDIT/DELETE USER -->	
+		<div class="col-lg-12 col-sm-12">
 			<%if (user._id.toString() === currentUser._id.toString()) {%>
-				<a class="btn btn-outline-dark btn-sm btn-block" id="edit-user" href="/user/<%= user.id %>/edit">Edit <%=currentUser.username%></a>
-					<form action="/user/<%= user.id %>?_method=DELETE" method="POST">
-						<button class="btn btn-outline-danger btn-sm btn-block" type="submit">Delete <%=currentUser.username%></button>
+
+				<a class="btn btn-outline-dark btn-sm btn-block" id="edit-user" href="/user/<%= user.id %>/edit">
+					Edit <%=currentUser.username%>
+				</a>
+
+				<form action="/user/<%= user.id %>?_method=DELETE" method="POST">
+					<button class="btn btn-outline-danger btn-sm btn-block" type="submit">
+						Delete <%=currentUser.username%>
+					</button>
 				</form>
+
 			<%}%>
 		</div>
+
 	</main>
 
-
-
-<!-- 		LOGOUT BUTTON
- --><footer class="container-fluid text-center">
+	<!-- LOGOUT -->
+	<footer class="container-fluid text-center">
 		<form action="/logout" method="GET">
-	   		<input type="submit" class="btn-block" id="logout" value="Logout <%=currentUser.username%>" />
+	   	<input type="submit" class="btn-block" id="logout" value="Logout <%=currentUser.username%>" />
 		</form>
 	</footer>
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  	<script src="/js/app.js"></script>
+  <script src="/js/app.js"></script>
 </body>
 </html>
