code semantic cleanup

--- a/less/style.less
+++ b/less/style.less
@@ -8,7 +8,9 @@ body {
 	background-color: #62717b !important;
 }
 
-
+.container-fluid {
+	background-color: none !important;
+}
 
 
 #home-message {
@@ -138,15 +140,11 @@ ul {
 
 //show page card
 
-.container-fluid{
-	background-color: ##cfd8dc;
-}
-
 #card-hovercard {
 	padding: 10px 5px;
 	align-content: center;
 	border-style: none;
-	background-color: ##cfd8dc;
+	background-color: #cfd8dc;
 }
 
 .card-background {
@@ -257,6 +255,7 @@ div.container.text-center {
 	padding: 0;
 }
 nav {
+	// background-color: #102027 !important;
 	height: 50px !important;
 }
 span.navbar-toggler-icon{
