--- a/views/artist/new.ejs
+++ b/views/artist/new.ejs
@@ -7,9 +7,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <style>
-    body { padding-top: 10px; };
-    </style>
   </head>
   <body>
 
@@ -26,7 +23,7 @@
     						</ul>
 
     						<ul class="nav navbar-right">
-    							<li><a href="/user/<%=users.id%>"><span class="glyphicon glyphicon-plus"></span>Back to User</a></li>
+    							<li><a href="/user/<%=users.id%>">Back to User</a></li>
     						</ul>
     					</div>
     				</div>
