--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -2,13 +2,10 @@
 <html>
 	<head>
 		<title>Edit User</title>
-		<link rel="stylesheet" href="../css/style.css">
+		<link rel="stylesheet" href="../../css/style.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<style>
-			body { padding-top: 10px; };
-		</style>
 	</head>
 <body>
 
@@ -26,9 +23,7 @@
 
 				<ul class="nav navbar-right">
 					<li>
-						<a href="/user/<%= user.id %>">
-							<span class="glyphicon glyphicon-plus"></span>
-						Back to Profile</a>
+						<a href="/user/<%= user.id %>">Back to Profile</a>
 					</li>
 				</ul>
 
