--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,9 @@
 body {
   background-color: #62717b !important;
 }
+.container-fluid {
+  background-color: none !important;
+}
 #home-message {
   color: white;
   text-align: center;
@@ -16,7 +19,7 @@ body {
 #like-button:hover,
 #event-button:hover {
   background-color: #8eacbb;
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
 #logout {
   background-color: #ff7043;
@@ -25,7 +28,7 @@ body {
 }
 #logout:hover {
   background-color: #ffa270;
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
 #edit-user:hover,
 #edit-artist:hover,
@@ -33,7 +36,7 @@ body {
 #edit-submit:hover,
 #new-submit:hover {
   color: white;
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
 a,
 #user-carousel,
@@ -112,17 +115,14 @@ ul {
   height: 100%;
   width: 100%;
   opacity: 0;
-  transition: .5s ease;
+  transition: 0.5s ease;
   background-color: rgba(98, 114, 123, 0.75);
-}
-.container-fluid {
-  background-color: ##cfd8dc;
 }
 #card-hovercard {
   padding: 10px 5px;
   align-content: center;
   border-style: none;
-  background-color: ##cfd8dc;
+  background-color: #cfd8dc;
 }
 .card-background {
   align-content: center;
