--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -8,12 +8,6 @@
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-
-
-  	<style>
-  	body { padding-top: 10px; };
-  	</style>
   </head>
   <body>
 <!--       NAV
@@ -28,7 +22,7 @@
                 </ul>
 
                 <ul class="nav navbar-right">
-                  <li><a href="/user"><span class="glyphicon glyphicon-plus"></span> Back to Users</a></li>
+                  <li><a href="/artist">Back to Artists</a></li>
                 </ul>
             </div>
         </nav>
@@ -110,16 +104,16 @@
  -->                <div class="tab-pane fade in" id="tab2">
                       <h3> <%=artist.name%> Members </h3>
                         <ul>
-                          <% for (let i = 0; i < artist.usersWithAccess.length; i++) { -%>
-                            <li> <a href="/user/<%=artist.usersWithAccess[i].id%>"> <%= artist.usersWithAccess[i].username%></a></li>
+                          <% for (let i = 0; i < artist.bandMembers.length; i++) { -%>
+                            <li> <a href="/user/<%=artist.bandMembers[i].user_id%>"> <%= artist.bandMembers[i].username%></a></li>
                           <% } -%>
                         </ul>
 
 
 <!--                ADD MEMBERS
  --><!--            only band members should be able to add a member
- -->                <% for (let i = 0; i < artist.usersWithAccess.length; i++) { -%>
-                      <%if (user.id.toString() === artist.usersWithAccess[i].id.toString()) {%>
+ -->                <% for (let i = 0; i < artist.bandMembers.length; i++) { -%>
+                      <%if (user.id.toString() === artist.bandMembers[i].user_id.toString()) {%>
                         <div class="btn-group dropright">
                             <button type="button" class="btn btn-success">
                                Add Member
@@ -142,8 +136,8 @@
  -->
 <!--               only band members should be able to remove a member
  -->
-                    <% for (let i = 0; i < artist.usersWithAccess.length; i++) { -%>
-                      <%if (user.id.toString() === artist.usersWithAccess[i].id.toString()) {%>
+                    <% for (let i = 0; i < artist.bandMembers.length; i++) { -%>
+                      <%if (user.id.toString() === artist.bandMembers[i].user_id.toString()) {%>
                         <div class="btn-group dropright">
                             <button type="button" class="btn btn-danger">
                                Remove Member
@@ -153,15 +147,15 @@
                             </button>
                             <div class="dropdown-menu">
 
-                              <% for (let i = 0; i < artist.usersWithAccess.length; i++) { %>
-                                <%if (artist.usersWithAccess.length === 1) {%>
+                              <% for (let i = 0; i < artist.bandMembers.length; i++) { %>
+                                <%if (artist.bandMembers.length === 1) {%>
 <!--                                 if there's only one band member left, we want to delete the artist entirely
  -->                              <form action="/artist/<%= artist.id %>?_method=DELETE" method="POST">
-                                    <button class="dropdown-item" type="submit"><%=artist.usersWithAccess[i].username%></button>
+                                    <button class="dropdown-item" type="submit"><%=artist.bandMembers[i].username%></button>
                                   </form>
                                 <% } else {%>
 <!--                                      otherwise, only delete the member
- -->                               <a href="/artist/removeUser/<%=artist.id%>/<%=artist.usersWithAccess[i].id%>" class="dropdown-item"><%=artist.usersWithAccess[i].username%></a>
+ -->                               <a href="/artist/removeUser/<%=artist.id%>/<%=artist.bandMembers[i].id%>" class="dropdown-item"><%=artist.bandMembers[i].username%></a>
                                 <% } %>
 
                               <%}%>
@@ -186,8 +180,8 @@
 
 <!--                CREATE EVENT BUTTON
  --><!--            only band members should be able to create new events for the band
- -->                <% for (let i = 0; i < artist.usersWithAccess.length; i++) { -%>
-                      <%if (user.id.toString() === artist.usersWithAccess[i].id.toString()) {%>
+ -->                <% for (let i = 0; i < artist.bandMembers.length; i++) { -%>
+                      <%if (user.id.toString() === artist.bandMembers[i].user_id.toString()) {%>
 
                         <form action="/event/new" method="GET">
                           <input id= "createNewEvent" class="btn-dark" type="submit" value="Create New Event">
@@ -219,8 +213,8 @@
             </div>
 
 <!--             EDIT AND DELETE ARTIST BUTTONS
- -->        <% for (let i = 0; i < artist.usersWithAccess.length; i++) { -%>
-              <%if (user.id.toString() === artist.usersWithAccess[i].id.toString()) {%>
+ -->        <% for (let i = 0; i < artist.bandMembers.length; i++) { -%>
+              <%if (user.id.toString() === artist.bandMembers[i].user_id.toString()) {%>
                 <div class="col-lg-12 col-sm-12">
             			<a class="btn btn-outline-dark btn-sm btn-block" id="edit-artist" href="/artist/<%= artist.id %>/edit">Edit <%=artist.name%></a>
             				<form action="/artist/<%= artist.id %>?_method=DELETE" method="POST">
