--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-    <nav id="navbar">
+    <nav id="navbar" class="landing-nav">
       <a class="navbar-brand" href="/">Home</a>
       <!--  <button id="toggler" class="custom-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
