landing page navbar fully responsive

--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -13,7 +13,7 @@
 
   <header>
     <nav id="navbar" class="landing-nav">
-      <a class="navbar-brand" href="/">Home</a>
+      <a class="navbar-brand" id="navbar" href="/">Home</a>
       <!--  <button id="toggler" class="custom-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
           </button> -->
@@ -32,7 +32,7 @@
             </ul>
             <ul class="nav navbar-right">
               <li>
-                <a class="nav-link" data-toggle="modal" data-target="#loginModal">Log In</a>
+                <a id="log-in" class="nav-link" data-toggle="modal" data-target="#loginModal">Log In</a>
               </li>
               <li>
                 <a id="sign-up" class="nav-link" data-toggle="modal" data-target="#registerModal">Sign Up</a>
