--- a/less/style.less
+++ b/less/style.less
@@ -6,6 +6,7 @@
 
 body {
 	background-color: #62717b !important;
+	width: 100%;
 }
 
 .container-fluid {
@@ -273,8 +274,8 @@ a.nav-item.nav-link, div.dropdown-menu.show, div.dropdown-menu{
 	padding-right: 20px;
 	margin-right: 12px;
 }
-.navbar-brand {
-	font-size: 21.5px;
+#browse, #navbar {
+	font-size: 20px;
 }
 // // correction for .navbar-right
 @media (max-width: 767px) {
@@ -288,8 +289,7 @@ a.nav-item.nav-link, div.dropdown-menu.show, div.dropdown-menu{
 		margin-top: -8px;
 	}
 	#browse {
-		// position: absolute;
-		position: relative;
+		position: absolute;
 		top: 1;
 		padding-top: 15px;
 		padding-bottom: 15px;
@@ -302,29 +302,30 @@ a.nav-item.nav-link, div.dropdown-menu.show, div.dropdown-menu{
 	}
 }
 
-// @media (max-width: 450px) {
-// 	nav {
-// 		margin-top: -8px;
-// 		* {
-// 			font-size: 12px;
-// 		}
-// 	}
-// 	.navbar-brand {
-// 		font-size: 14px;
-// 	}
-// 	#browse {
-// 		position: absolute;
-// 		left: -5vw;
-// 		top: 0.5vw;
-// 		padding-top: 15px;
-// 		padding-bottom: 15px;
-// 	}
-// 	.navbar-right {
-// 		position: absolute;
-// 		top: 2.4vw;
-// 	    right: -1.7vw;
-// 	}
-// }
+@media (max-width: 450px) {
+	nav {
+		margin-top: -8px;
+	}
+	#navbar {
+		font-size: 15px;
+		margin-right: 0;
+	}
+	#sign-up, #log-in {
+		padding: 15px 5px;
+	}
+	#browse {
+		position: absolute;
+		font-size: 15px;
+		top: 1;
+		padding: 15px 5px;
+	}
+	.navbar-right {
+		position: absolute;
+	  top: 0;
+		right: 0;
+	  padding-right: 2.5px;
+	}
+}
 
 #browse {
 	width: 120px;
@@ -336,7 +337,7 @@ a.nav-item.nav-link, div.dropdown-menu.show, div.dropdown-menu{
 #navbar {
 	background-color: #102027;
 	font-family: @navFont;
-	font-size: 1.5em;
+	// font-size: 1.5em;
 	a {
 		color: #e2f1f8;
 		&:hover {
