--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: #62717b !important;
+  width: 100%;
 }
 .container-fluid {
   background-color: none !important;
@@ -245,8 +246,9 @@ div.dropdown-menu {
   padding-right: 20px;
   margin-right: 12px;
 }
-.navbar-brand {
-  font-size: 21.5px;
+#browse,
+#navbar {
+  font-size: 20px;
 }
 @media (max-width: 767px) {
   #sign-up {
@@ -256,10 +258,35 @@ div.dropdown-menu {
     margin-top: -8px;
   }
   #browse {
-    position: relative;
+    position: absolute;
     top: 1;
     padding-top: 15px;
     padding-bottom: 15px;
+  }
+  .navbar-right {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding-right: 2.5px;
+  }
+}
+@media (max-width: 450px) {
+  nav {
+    margin-top: -8px;
+  }
+  #navbar {
+    font-size: 15px;
+    margin-right: 0;
+  }
+  #sign-up,
+  #log-in {
+    padding: 15px 5px;
+  }
+  #browse {
+    position: absolute;
+    font-size: 15px;
+    top: 1;
+    padding: 15px 5px;
   }
   .navbar-right {
     position: absolute;
@@ -278,7 +305,6 @@ div.dropdown-menu {
 #navbar {
   background-color: #102027;
   font-family: 'Maven Pro', sans-serif;
-  font-size: 1.5em;
 }
 #navbar a {
   color: #e2f1f8;
