--- a/views/artist/index.ejs
+++ b/views/artist/index.ejs
@@ -13,21 +13,17 @@
 
 	<header>
 		<nav id="navbar">
-			<div class="container-fluid">
-
-				<ul class="nav navbar-left">
-					<li class="active"><a href="/">Home</a></li>
-					<li><a href="/user">Users</a></li>
-					<li><a href="/event">Events</a></li>
-				</ul>
-
-			</div>
+			<ul class="nav navbar-left">
+				<li class="active"><a id="nav-responsive" href="/">Home</a></li>
+				<li><a id="nav-responsive" href="/user">Users</a></li>
+				<li><a id="nav-responsive" href="/event">Events</a></li>
+			</ul>
 		</nav>
 
 		<div id="index-jumbo">
 			<div class="jumbotron">
 		  		<div class="container text-center">
-		    		<h1 class= "indexHeader">Artists</h1>
+		    		<h1 class="indexHeader">Artists</h1>
 		  		</div>
 			</div>
 		</div>
