--- a/views/artist/new.ejs
+++ b/views/artist/new.ejs
@@ -10,26 +10,21 @@
   </head>
   <body>
 
-<!--     NAV
- -->  <header>
-        <nav id="navbar">
-    		  <nav class="navbar navbar-inverse">
-    				<div class="container-fluid">
+    <header>
+      <nav id="navbar">
 
-    						<ul class="nav navbar-left">
-    							<li class="active"><a href="/">Home</a></li>
-                  <li><a href="/user">Users</a></li>
-                  <li><a href="/event">Events</a></li>
-    						</ul>
+				<ul class="nav navbar-left">
+					<li class="active"><a id="nav-responsive" href="/">Home</a></li>
+          <li><a id="nav-responsive" href="/user">Users</a></li>
+          <li><a id="nav-responsive" href="/event">Events</a></li>
+				</ul>
 
-    						<ul class="nav navbar-right">
-    							<li><a href="/user/<%=users.id%>">Back to User</a></li>
-    						</ul>
-    					</div>
-    				</div>
-    			</nav>
-        </nav>
-    	</header>
+				<ul class="nav navbar-right">
+					<li><a id="nav-responsive" href="/user/<%=users.id%>">Back to User</a></li>
+				</ul>
+
+      </nav>
+  	</header>
 
 <!--         NEW ARTIST FORM
  -->  <main>
