--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -10,24 +10,22 @@
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
   <body>
-<!--       NAV
- -->  <header>
-        <nav id="navbar">
-            <div class="container-fluid">
+    <header>
+      <nav id="navbar">
 
-                <ul class="nav navbar-left">
-                  <li class="active"><a href="/">Home</a></li>
-                  <li><a href="/user">Users</a></li>
-                  <li><a href="/event">Events</a></li>
-                </ul>
+        <ul class="nav navbar-left">
+          <li class="active"><a id="nav-responsive" href="/">Home</a></li>
+          <li><a id="nav-responsive" href="/user">Users</a></li>
+          <li><a id="nav-responsive" href="/event">Events</a></li>
+        </ul>
 
-                <ul class="nav navbar-right">
-                  <li><a href="/artist">Back to Artists</a></li>
-                </ul>
-            </div>
-        </nav>
+        <ul class="nav navbar-right">
+          <li><a id="nav-responsive" href="/artist">Back to Artists</a></li>
+        </ul>
+        
+      </nav>
 
-      </header>
+    </header>
 
 
       <main>
