--- a/views/event/edit.ejs
+++ b/views/event/edit.ejs
@@ -10,21 +10,19 @@
 <body>
 
 	<header>
-		<nav id= "navbar" class="navbar navbar-inverse">
-				<div class="container-fluid">
+		<nav id="navbar">
+			<ul class="nav navbar-left">
+				<li class="active"><a id="nav-responsive" href="/">Home</a></li>
+				<li><a id="nav-responsive" href="/user">Users</a></li>
+				<li><a id="nav-responsive" href="/artist">Artists</a></li>
+			</ul>
 
-						<ul class="nav navbar-left">
-							<li class="active"><a href="/">Home</a></li>
-							<li><a href="/user">Users</a></li>
-							<li><a href="/artist">Artists</a></li>
-						</ul>
-
-						<ul class="nav navbar-right">
-							<li><a href="/event"><span class="glyphicon glyphicon-plus"></span>Back to Events</a></li>
-					</ul>
-				</div>
-			</nav>
-		</header>
+			<ul class="nav navbar-right">
+				<li><a id="nav-responsive" href="/event">Back to Events</a></li>
+			</ul>
+				
+		</nav>
+	</header>
 
 
   	<main>
