--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -15,13 +15,13 @@
 						<div class="container-fluid">
 
 								<ul class="nav navbar-left">
-									<li class="active"><a href="/">Home</a></li>
-									<li><a href="/user">Users</a></li>
-									<li><a href="/artist">Artists</a></li>
+									<li class="active"><a id="nav-responsive" href="/">Home</a></li>
+									<li><a id="nav-responsive" href="/user">Users</a></li>
+									<li><a id="nav-responsive" href="/artist">Artists</a></li>
 								</ul>
 
 								<ul class="nav navbar-right">
-									<li><a href="/event"><span class="glyphicon glyphicon-plus"></span> Back to Events</a></li>
+									<li><a id="nav-responsive" href="/event"><span class="glyphicon glyphicon-plus"></span> Back to Events</a></li>
 								</ul>
 							</div>
 						</nav>
