--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -15,17 +15,17 @@
 
 		<!-- NAV -->	
 		<nav id="navbar">
-			<div class="container-fluid">
-				<ul class="nav navbar-left">
-					<li class="active"><a href="/">Home</a></li>
-					<li><a href="/artist">Artists</a></li>
-					<li><a href="/event">Events</a></li>
-				</ul>
+			<ul class="nav navbar-left">
+				<li class="active"><a id="nav-responsive" href="/">Home</a></li>
+				<li><a id="nav-responsive" href="/artist">Artists</a></li>
+				<li><a id="nav-responsive" href="/event">Events</a></li>
+			</ul>
 
-				<ul class="nav navbar-right">
-					<li><a href="/artist/new"><span class="glyphicon glyphicon-plus"></span> Become an Artist</a></li>
-				</ul>
-			</div>
+			<ul class="nav navbar-right">
+				<li>
+					<a id="nav-responsive" href="/artist/new"><span class="glyphicon glyphicon-plus"></span> Become an Artist</a>
+				</li>
+			</ul>
 		</nav>
 
 		<div id="index-jumbo">
