--- a/views/artist/edit.ejs
+++ b/views/artist/edit.ejs
@@ -11,22 +11,19 @@
 
   <body>
     <header>
-      <nav id="navbar" class="navbar navbar-inverse">
-          <div class="container-fluid">
+      <nav id="navbar">
+        <ul class="nav navbar-left">
+          <li class="active"><a id="nav-responsive" href="/">Home</a></li>
+          <li><a id="nav-responsive" href="/user">Users</a></li>
+          <li><a id="nav-responsive" href="/event">Events</a></li>
+        </ul>
 
-              <ul class="nav navbar-left">
-                <li class="active"><a href="/">Home</a></li>
-                <li><a href="/user">Users</a></li>
-                <li><a href="/event">Events</a></li>
-              </ul>
+        <ul class="nav navbar-right">
+          <li><a id="nav-responsive" href="/artist/<%=artist.id%>">Back to Artist</a></li>
+        </ul>
 
-              <ul class="nav navbar-right">
-                <li><a href="/artist/<%=artist.id%>"><span class="glyphicon glyphicon-plus"></span>Back to Artist</a></li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </header>
+      </nav>
+    </header>
 
       <main>
 
