--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -13,34 +13,28 @@
 
   <header>
     <nav id="navbar" class="landing-nav">
-      <a class="navbar-brand" id="navbar" href="/">Home</a>
-      <!--  <button id="toggler" class="custom-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-          </button> -->
+      <a class="navbar-brand" id="nav-responsive" href="/">Home</a>
+      <ul class="nav navbar-nav">
 
-<!--           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
- -->        <ul class="nav navbar-nav">
-
-              <li class="nav-item dropdown">
-                <a class="dropdown-toggle" id="browse" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Browse</a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="nav-item nav-link" href="/user">Users</a>
-                  <a class="nav-item nav-link" href="/artist">Artists</a>
-                  <a class="nav-item nav-link" href="/event">Events</a>
-                </div>
-              </li>
-            </ul>
-            <ul class="nav navbar-right">
-              <li>
-                <a id="log-in" class="nav-link" data-toggle="modal" data-target="#loginModal">Log In</a>
-              </li>
-              <li>
-                <a id="sign-up" class="nav-link" data-toggle="modal" data-target="#registerModal">Sign Up</a>
-              </li>
-            </ul>
-<!--           </div>
- -->        </nav>
-      </header>
+        <li class="nav-item dropdown">
+          <a class="dropdown-toggle" id="browse" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Browse</a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="nav-item nav-link" href="/user">Users</a>
+            <a class="nav-item nav-link" href="/artist">Artists</a>
+            <a class="nav-item nav-link" href="/event">Events</a>
+          </div>
+        </li>
+      </ul>
+      <ul class="nav navbar-right">
+        <li>
+          <a id="log-in" class="nav-link" data-toggle="modal" data-target="#loginModal">Log In</a>
+        </li>
+        <li>
+          <a id="sign-up" class="nav-link" data-toggle="modal" data-target="#registerModal">Sign Up</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
       <main>
         <% if (message) { -%>
