--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -12,19 +12,15 @@
 	<!-- NAV -->
 	<header>
 		<nav id="navbar">
-			<div class="container-fluid">
+			<ul class="nav navbar-left">
+				<li class="active"><a id="nav-responsive" href="/">Home</a></li>
+				<li><a id="nav-responsive" href="/artist">Artists</a></li>
+				<li><a id="nav-responsive" href="/event">Events</a></li>
+			</ul>
 
-				<ul class="nav navbar-left">
-					<li class="active"><a href="/">Home</a></li>
-					<li><a href="/artist">Artists</a></li>
-					<li><a href="/event">Events</a></li>
-				</ul>
-
-				<ul class="nav navbar-right">
-					<li><a href="/user"><span class="glyphicon glyphicon-plus"></span> Back to Users</a></li>
-				</ul>
-
-			</div>
+			<ul class="nav navbar-right">
+				<li><a id="nav-responsive" href="/user"><span class="glyphicon glyphicon-plus"></span> Back to Users</a></li>
+			</ul>
 		</nav>
 	</header>
 
