--- a/views/event/index.ejs
+++ b/views/event/index.ejs
@@ -32,7 +32,7 @@
 
 
 
-		<div class="d-flex justify-content-md-around">
+		<div class="d-flex justify-content-around">
 
 			<%for (let i = 0; i < events.length; i++) {%>
 
