--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,63 @@ body {
   background-color: #62717b !important;
   width: 100%;
 }
+nav {
+  height: 50px !important;
+}
+ul {
+  list-style: none;
+}
+@media (max-width: 767px) {
+  #sign-up {
+    margin-right: 0;
+  }
+  .landing-nav {
+    margin-top: -8px;
+  }
+  #browse {
+    position: absolute;
+    top: 1;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  .navbar-right {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding-right: 2.5px;
+  }
+}
+@media (max-width: 475px) {
+  a.nav-item.nav-link,
+  div.dropdown-menu.show,
+  div.dropdown-menu {
+    font-size: 15px;
+    padding-left: 5px;
+    padding-right: 0;
+  }
+  #nav-responsive {
+    font-size: 15px;
+    margin-right: 0;
+    padding: 15px 5px;
+  }
+  #sign-up,
+  #log-in {
+    padding: 15px 5px;
+    font-size: 15px;
+  }
+  #browse {
+    position: absolute;
+    font-size: 15px;
+    top: 1;
+    padding: 15px 5px;
+  }
+  .navbar-right {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding-right: 2.5px;
+  }
+}
 .container-fluid {
   background-color: none !important;
 }
@@ -55,10 +112,10 @@ a:hover,
 #event-carousel:hover {
   text-decoration: none;
 }
-ul {
-  list-style: none;
-}
 /* INDEXES */
+.d-flex {
+  flex-flow: row wrap;
+}
 .indexHeader {
   font-family: 'Permanent Marker', cursive;
   text-align: center;
@@ -97,8 +154,8 @@ ul {
 #userListPic {
   width: 100%;
   height: 100%;
-  max-height: 280px;
-  max-width: 280px;
+  max-height: 200px;
+  max-width: 200px;
   border-radius: 100%;
 }
 .picContainer-fluid {
@@ -231,9 +288,6 @@ ul {
 div.container.text-center {
   padding: 0;
 }
-nav {
-  height: 50px !important;
-}
 span.navbar-toggler-icon {
   color: #e2f1f8 !important;
 }
@@ -252,57 +306,6 @@ div.dropdown-menu {
 #browse,
 #navbar {
   font-size: 20px;
-}
-@media (max-width: 767px) {
-  #sign-up {
-    margin-right: 0;
-  }
-  .landing-nav {
-    margin-top: -8px;
-  }
-  #browse {
-    position: absolute;
-    top: 1;
-    padding-top: 15px;
-    padding-bottom: 15px;
-  }
-  .navbar-right {
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding-right: 2.5px;
-  }
-}
-@media (max-width: 475px) {
-  a.nav-item.nav-link,
-  div.dropdown-menu.show,
-  div.dropdown-menu {
-    font-size: 15px;
-    padding-left: 5px;
-    padding-right: 0;
-  }
-  #nav-responsive {
-    font-size: 15px;
-    margin-right: 0;
-    padding: 15px 5px;
-  }
-  #sign-up,
-  #log-in {
-    padding: 15px 5px;
-    font-size: 15px;
-  }
-  #browse {
-    position: absolute;
-    font-size: 15px;
-    top: 1;
-    padding: 15px 5px;
-  }
-  .navbar-right {
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding-right: 2.5px;
-  }
 }
 #browse {
   width: 120px;
@@ -336,8 +339,8 @@ div.col-md-12 {
   font-size: 6vw;
 }
 .carousel-indicators * {
-  max-width: 3vw ;
-  max-height: 3vw ;
+  max-width: 3vw;
+  max-height: 3vw;
 }
 .create-new {
   color: #f4511e;
