broken image links will now render a fallback image

--- a/views/event/index.ejs
+++ b/views/event/index.ejs
@@ -38,7 +38,7 @@
 
 				<div class="picContainer-fluid">
 					<div class="col-med-6">
-						<img src="<%=events[i].img%>" id="eventListPic" class="img-responsive" style="width:100%" alt="<%=events[i].name%> Image">
+						<img src="<%=events[i].img%>" id="eventListPic" class="img-responsive backup_picture" style="width:100%" alt="<%=events[i].name%> Image">
 						<div class="overlay">
 							<div class="linkText"> 
 								<p><a class="indexLink" href="/event/<%=events[i].id%>"><%=events[i].name%></a></p> 
