--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -38,7 +38,7 @@
 
 			        	<div class="card-background">
 
-			           		<img id="eventListPic" class="card-bkimg" alt="<%=event.name%> Image" src="<%=event.img%>">
+			           		<img id="eventListPic" class="card-bkimg backup_picture" alt="<%=event.name%> Image" src="<%=event.img%>">
 								
 			        	</div>
 
