--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -47,7 +47,7 @@
 				<div class="picContainer-fluid">
 					<div class="col-med-6">
 
-						<img src="<%=users[i].avatar%>" id="userListPic" class="img-responsive" style="width:100%" alt="">
+						<img src="<%=users[i].avatar%>" id="userListPic" class="img-responsive backup_picture" style="width:100%" alt="">
 
 						<div class="overlay">
 							<div class="linkText">
